S2: Use explicit list endpoints in touched diagnostics