@@ -611,8 +611,8 @@ public class LambdaExpression
 
         if (hasOnlyParamNames()) {
             if (atypeReqParams == null) {
-                errs.error(Compiler.PARAMETER_TYPES_REQUIRED, in(getSource(), paramNames.get(0).getStartPosition(),
-                        paramNames.get(cParams-1).getEndPosition()));
+                errs.error(Compiler.PARAMETER_TYPES_REQUIRED, in(getSource(), paramNames.getFirst().getStartPosition(),
+                        paramNames.getLast().getEndPosition()));
                 fValid = false;
             }
 
